/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

option java_package = "org.apache.hadoop.yarn.proto";
option java_outer_classname = "YarnSecurityTokenProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
package hadoop.yarn;

import "yarn_protos.proto";

// None of the following records are supposed to be exposed to users.

message NMTokenIdentifierProto {
  optional ApplicationAttemptIdProto appAttemptId = 1;
  optional NodeIdProto nodeId = 2;
  optional string appSubmitter = 3;
  optional int32 keyId = 4 [default = -1];
}

message AMRMTokenIdentifierProto {
  optional ApplicationAttemptIdProto appAttemptId = 1;
  optional int32 keyId = 2 [default = -1];
}

message ContainerTokenIdentifierProto {
  optional ContainerIdProto containerId = 1;
  optional string nmHostAddr = 2;
  optional string appSubmitter = 3;
  optional ResourceProto resource = 4;
  optional int64 expiryTimeStamp =5;
  optional int32 masterKeyId = 6 [default = -1];
  optional int64 rmIdentifier = 7;
  optional PriorityProto priority = 8;
  optional int64 creationTime = 9;
  optional LogAggregationContextProto logAggregationContext = 10;
  optional string nodeLabelExpression = 11;
  optional ContainerTypeProto containerType = 12;
  optional ExecutionTypeProto executionType = 13 [default = GUARANTEED];
  optional int32 version = 14 [default = 0];
  optional int64 allocation_request_id = 15 [default = -1];
  repeated string allocation_tags = 16;
}

message ClientToAMTokenIdentifierProto {
  optional ApplicationAttemptIdProto appAttemptId = 1;
  optional string clientName = 2;
}

message YARNDelegationTokenIdentifierProto {
  optional string owner = 1;
  optional string renewer = 2;
  optional string realUser = 3;
  optional int64 issueDate = 4;
  optional int64 maxDate = 5;
  optional int32 sequenceNumber = 6;
  optional int32 masterKeyId = 7;
}

message DockerCredentialTokenIdentifierProto {
  optional string registryUrl = 1;
  optional string applicationId = 2;
}

